--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <meta name="pastmodifieddate" content="May 5, 2022">
 <meta name="pastmodifieddate" content="May 1, 2024">
 <meta name="lastmodifieddate" content="February 11, 2025">
+<meta http-equiv="refresh" content="0; URL=https://www.innovateinfinitely.com/">
+<link rel="canonical" href="https://www.innovateinfinitely.com/">
 <title>Innovate Infinitely</title>
 </head>
 <body>
