Upload police car webpages files

--- a/policecarphotoalbum/policecarphotoalbumca.html
+++ b/policecarphotoalbum/policecarphotoalbumca.html
@@ -1,1 +1,19 @@
+<!doctype html>
+<head>
+<meta charset="utf-8"/>
+<meta name="author" content="Raymond Mar">
+<meta name="description" content="Police car photo album gallery containing police cars photos from various cities such as the Ohlone College Police, BART Police, San Jose Police, Milpitas Police, Palo Alto Police, Fremont Police, Campbell Police, Anaheim Police, Sacramento County Sheriff, Santa Clara County Sheriff, Oakland Police, Santa Clara Police, San Francisco Police, San Francisco County Sheriff, and state such as the California State Univesity (CSU), University of California (UC), San Jose State University, Foothill De Anza, Santa Cruz, Los Angeles, Long Beach, Capitola, Sunnyvale, Union City, Berkeley, San Mateo, Carmel, Monterey, Mountain View, San Leandro, Los Gatos Monte Sereno, Alameda, Danville, and the California Highway Patrol.">
+<meta name="keywords" content="Police, Squad, Sheriff, Highway Patrol, State Police, Cops, Car, Cars, Automobile, Autos, Automobiles, Motorcycles, Picture, Photos, Gallery, Album, Pics">
+<meta name="pastmodifieddate" content="Apr 18, 2023">
+<meta name="pastmodifieddate" content="Oct 21, 2023">
+<meta name="pastmodifieddate" content="Apr 24, 2024">
+<meta name="pastmodifieddate" content="Aug 2, 2024">
+<meta name="lastmodifieddate" content="February 13, 2025">
+<title>Police Car Photo Album California, USA</title>
+</head>
+<body>
+<h2>Innovate Infinitely is looking for another web hosting provider.  Thank you for your patience.</h2>
 
+<h3>Email:  raym61 at hotmail dot com.</h3>
+</body>
+</html>
